# simplex_method

./: CMakeLists.txt  a.out  in  main.cpp  simplex_method.cpp  simplex_method.h  test.cpp
